v1.2 dev - 1 {
    - Version change to 1.2
}

v1.1 dev - 2 {
    - Fixed an issue where development builds were not displayed
}

v1.1 dev-1 {
    - Version changed to 1.1
    - Added spigot resource update notifications
    - Added missing VanillaFood Type
    - Displayed in console when running development version
    - In the FoodPotionEffect format, <duration> has been changed to allow seconds values as well. (ex. saturation:1:5s:0.5 = saturation:1:100:50%)
    - In the FoodPotionEffect format, <chance> has been changed to allow integer values as well. (ex. saturation:1:100:50% = saturation:1:100:0.5)
    - An error message about invalid format will be displayed with more detailed information.
    - Fixed an issue where the Duration value of a PotionEffect would not change to the new format when migrating
}

v1.0 dev-4 {

    - Added migration feature from ConsumeFood 1 to 2 for CustomFood and VanillaFood
    - Fixed an issue where some options were not being saved correctly
    - Fixed an issue where Execute Command was executed twice

    Add commands
    - /consumefood2 migrate customfood
    - /consumefood2 migrate vanillafood

    Add permissions
    - consumefood2.command.migrate.customfood
    - consumefood2.command.migrate.vanillafood

}

v1.0 dev-3 {

    - Added VanillaFood edit gui
    - Added cooldown messages for CustomFood and VanillaFood
    - Removed dependency on NBTAPI and shaded into plugin
    - Fixed an issue where options were not saved when changed via GUI

    Add commands
    - consumefood2 vanillafood edit
    - consumefood2 vanillafood give

    Add permissions
    - consumefood2.command.vanillafood.edit
    - consumefood2.command.vanillafood.give

}

v1.0 dev-2 {

    - Added CustomFood Edit gui

    Add options
    - MaxStackSize (+ 1.20.5)
    - HideAdditionalTooltip (+ 1.20.5)

    Add commands
    - /consumefood2 foodlevel
    - /consumefood2 saturation
    - /consumefood2 customfood edit
    - /consumefood2 customfood create