@@ -1,5 +1,13 @@
 v1.2 dev - 1 {
     - Version change to 1.2
+    - Added inventory update command
+    - Added inventory update configuration
+
+    Add commands
+    - /consumefood2 update-inventory [<player>]
+
+    Add permissions
+    - consumefood2.command.update-inventory
 }
 
 v1.1 dev - 2 {
